- version that recurses children, but exits 3 times - package.json added - test added for create and get

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "mocha": "^2.2.1",
     "node-zookeeper-client": "^0.2.2",
     "underscore": "^1.8.2"
   },
