--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "async": "^0.9.0",
     "mocha": "^2.2.1",
     "node-zookeeper-client": "^0.2.2",
     "underscore": "^1.8.2"
